--- a/src/ps2/CMakeLists.txt
+++ b/src/ps2/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(ps2_card STATIC
                 ${CMAKE_CURRENT_SOURCE_DIR}/card_emu/ps2_memory_card.c
                 ${CMAKE_CURRENT_SOURCE_DIR}/card_emu/ps2_mc_commands.c
                 ${CMAKE_CURRENT_SOURCE_DIR}/card_emu/ps2_mc_auth.c
+                ${CMAKE_CURRENT_SOURCE_DIR}/history_tracker/ps2_history_tracker.c
                 ${CMAKE_CURRENT_SOURCE_DIR}/ps2_dirty.c
                 ${CMAKE_CURRENT_SOURCE_DIR}/ps2_cardman.c
                 ${CMAKE_CURRENT_SOURCE_DIR}/ps2_pio_qspi.c
@@ -23,7 +24,8 @@ target_link_libraries(ps2_card PRIVATE
             hardware_sync
             hardware_pio
             hardware_flash
-            hardware_dma)
+            hardware_dma
+            mcfat)
 
 
 pico_generate_pio_header(ps2_card ${CMAKE_CURRENT_LIST_DIR}/card_emu/ps2_mc_spi.pio)
