--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -55,9 +55,9 @@ target_link_libraries(sd_fat
 target_link_libraries(sd_fat PRIVATE sd2psx_common)
 
 
-add_library(ssd1306 STATIC ${CMAKE_CURRENT_SOURCE_DIR}/pico-ssd1306/ssd1306.c)
+add_library(ssd1306 STATIC ${CMAKE_CURRENT_SOURCE_DIR}/ssd1306/ssd1306.c)
 target_link_libraries(ssd1306 pico_stdlib hardware_i2c)
-target_include_directories(ssd1306 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/pico-ssd1306)
+target_include_directories(ssd1306 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ssd1306)
 
 set(LV_CONF_PATH ${PROJECT_SOURCE_DIR}/src/lv_conf.h CACHE STRING "" FORCE)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/lvgl EXCLUDE_FROM_ALL)
