--- a/src/ps2/CMakeLists.txt
+++ b/src/ps2/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library(ps2_card STATIC
                 ${CMAKE_CURRENT_SOURCE_DIR}/card_emu/ps2_mc_commands.c
                 ${CMAKE_CURRENT_SOURCE_DIR}/card_emu/ps2_mc_auth.c
                 ${CMAKE_CURRENT_SOURCE_DIR}/history_tracker/ps2_history_tracker.c
+                ${CMAKE_CURRENT_SOURCE_DIR}/file_handling/ps2_file_handling.c
                 ${CMAKE_CURRENT_SOURCE_DIR}/ps2_dirty.c
                 ${CMAKE_CURRENT_SOURCE_DIR}/ps2_cardman.c
                 ${CMAKE_CURRENT_SOURCE_DIR}/ps2_pio_qspi.c
