--- a/src/ps1/CMakeLists.txt
+++ b/src/ps1/CMakeLists.txt
@@ -14,6 +14,7 @@ target_link_libraries(ps1_card
                             pico_platform_headers 
                             pico_stdlib 
                             pico_multicore
-                            hardware_pio)
+                            hardware_pio
+                            psram)
 
 pico_generate_pio_header(ps1_card ${CMAKE_CURRENT_LIST_DIR}/ps1_mc_spi.pio)
