--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ add_subdirectory(ext/)
 add_executable(sd2psx
     src/main.c
 
-    src/game_names/game_names.c
+    src/game_db/game_db.c
     src/wear_leveling/wear_leveling.c
     src/wear_leveling/wear_leveling_rp2040_flash.c
 
