--- a/database/CMakeLists.txt
+++ b/database/CMakeLists.txt
@@ -23,7 +23,7 @@ set(GAMEDB_PS2_OBJ "${CMAKE_CURRENT_BINARY_DIR}/gamedbps2.o")
 add_custom_target(gamedbobjs_ps2 ALL 
                     COMMAND ${CMAKE_COMMAND}
                         -D OUTPUT_DIR=${CMAKE_CURRENT_BINARY_DIR}
-                        -D PYTHON_SCRIPT=${CMAKE_CURRENT_SOURCE_DIR}/get_and_parse_hdldb.py
+                        -D PYTHON_SCRIPT=${CMAKE_CURRENT_SOURCE_DIR}/parse_hdldb.py
                         -D CMAKE_OBJCOPY=${CMAKE_OBJCOPY}
                         -D SYSTEM=ps2
                         -P ${CMAKE_CURRENT_SOURCE_DIR}/db_obj_builder.cmake
