Make sure sd card is initialized right before first access

--- a/src/ps2/CMakeLists.txt
+++ b/src/ps2/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(ps2_card STATIC
                 ${CMAKE_CURRENT_SOURCE_DIR}/card_emu/ps2_memory_card.c
                 ${CMAKE_CURRENT_SOURCE_DIR}/card_emu/ps2_mc_commands.c
                 ${CMAKE_CURRENT_SOURCE_DIR}/card_emu/ps2_mc_auth.c
+                ${CMAKE_CURRENT_SOURCE_DIR}/card_emu/ps2_mc_data_interface.c
                 ${CMAKE_CURRENT_SOURCE_DIR}/history_tracker/ps2_history_tracker.c
                 ${CMAKE_CURRENT_SOURCE_DIR}/mmce_fs/ps2_mmce_fs.c
                 ${CMAKE_CURRENT_SOURCE_DIR}/ps2_dirty.c
