Move ESP8266SdFat wrapper into it's own library
To be able to use as dependency in other libraries.

--- a/src/ps2/CMakeLists.txt
+++ b/src/ps2/CMakeLists.txt
@@ -24,6 +24,7 @@ target_link_libraries(ps2_card PRIVATE
             hardware_flash
             hardware_dma
             mcfat
+            sd_fat
             psram)
 
 
