--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -66,3 +66,6 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/mcfat)
 
 target_compile_definitions(mcfat PRIVATE MAX_CACHEENTRY=0x1)
 target_compile_definitions(mcfat PRIVATE MAX_FDHANDLES=0x1)
+
+add_library(inih STATIC ${CMAKE_CURRENT_SOURCE_DIR}/inih/ini.c)
+target_include_directories(inih PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inih)
