--- a/src/ps2/CMakeLists.txt
+++ b/src/ps2/CMakeLists.txt
@@ -8,7 +8,6 @@ add_library(ps2_card STATIC
                 ${CMAKE_CURRENT_SOURCE_DIR}/card_emu/ps2_mc_data_interface.c
                 ${CMAKE_CURRENT_SOURCE_DIR}/history_tracker/ps2_history_tracker.c
                 ${CMAKE_CURRENT_SOURCE_DIR}/mmce_fs/ps2_mmce_fs.c
-                ${CMAKE_CURRENT_SOURCE_DIR}/ps2_dirty.c
                 ${CMAKE_CURRENT_SOURCE_DIR}/ps2_cardman.c
             )
 
@@ -26,8 +25,19 @@ target_link_libraries(ps2_card PRIVATE
             hardware_flash
             hardware_dma
             mcfat
+            )
+
+if (SD2PSX_WITH_PSRAM)
+    target_link_libraries(ps2_card PRIVATE 
             psram)
+    target_sources(ps2_card PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/ps2_dirty.c)
+    pico_generate_pio_header(ps2_card ${CMAKE_CURRENT_LIST_DIR}/../psram/qspi.pio)
+endif()
 
 
-pico_generate_pio_header(ps2_card ${CMAKE_CURRENT_LIST_DIR}/card_emu/ps2_mc_spi.pio)
-pico_generate_pio_header(ps2_card ${CMAKE_CURRENT_LIST_DIR}/../psram/qspi.pio)
+configure_file(${CMAKE_CURRENT_LIST_DIR}/card_emu/ps2_mc_spi.pio ${CMAKE_CURRENT_BINARY_DIR}/ps2_mc_spi.pio)
+
+pico_generate_pio_header(ps2_card ${CMAKE_CURRENT_BINARY_DIR}/ps2_mc_spi.pio)
+
+#pico_generate_pio_header(ps2_card ${CMAKE_CURRENT_LIST_DIR}/card_emu/ps2_mc_spi.pio)
