--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,14 @@ set(SD2PSX_WITH_PSRAM ON CACHE BOOL "Build SD2PSX with PSRAM support")
 set(SD2PSX_WITH_GUI   ON CACHE BOOL "Build SD2PSX with GUI support")
 
 # Variants...
-set(VARIANT "PMC+" CACHE STRING "Firmware variant to build")
+set(VARIANT "SD2PSX" CACHE STRING "Firmware variant to build")
+set_property(CACHE VARIANT PROPERTY STRINGS
+                    "SD2PSX" 
+                    "PMC+" 
+                    "SD2PSXlite" 
+                    "SD2PSXBF" 
+                    "Other")
+message(STATUS "Building for ${VARIANT}")
 if (VARIANT STREQUAL "SD2PSX")
     set(PIN_PSX_ACK 16)
     set(PIN_PSX_SEL 17)
@@ -33,13 +40,33 @@ if (VARIANT STREQUAL "SD2PSX")
                             )
     set(SD2PSX_WITH_GUI TRUE)
     set(SD2PSX_WITH_PSRAM TRUE)
+elseif (VARIANT STREQUAL "SD2PSXBF")
+    set(PIN_PSX_ACK 16)
+    set(PIN_PSX_SEL 17)
+    set(PIN_PSX_CLK 18)
+    set(PIN_PSX_CMD 19)
+    set(PIN_PSX_DAT 20)
+    set(PIN_PSX_SPD_SEL 10)
+    add_compile_definitions("UART_TX=8"
+                            "UART_RX=9"
+                            "UART_PERIPH=uart1"
+                            "UART_BAUD=3000000"
+                            "SD_PERIPH=SPI1"
+                            "SD_MISO=24"
+                            "SD_MOSI=27"
+                            "SD_SCK=26"
+                            "SD_CS=29"
+                            "FLASH_OFF_CIV=0x1fb000"
+                            "FLASH_OFF_EEPROM=0x1fc000"
+                            )
+    set(SD2PSX_WITH_GUI TRUE)
+    set(SD2PSX_WITH_PSRAM TRUE)
 elseif( VARIANT STREQUAL "PMC+")
     set(PIN_PSX_ACK 9)
     set(PIN_PSX_SEL 7)
     set(PIN_PSX_CLK 8)
     set(PIN_PSX_CMD 6)
     set(PIN_PSX_DAT 5)
-    set(PIN_PSX_SPD_SEL 24)
     add_compile_definitions("UART_TX=0"
                             "UART_RX=1"
                             "UART_PERIPH=uart1"
@@ -54,13 +81,32 @@ elseif( VARIANT STREQUAL "PMC+")
                             )
     set(SD2PSX_WITH_GUI FALSE)
     set(SD2PSX_WITH_PSRAM FALSE)
+elseif( VARIANT STREQUAL "SD2PSXlite")
+    set(PIN_PSX_ACK 16)
+    set(PIN_PSX_SEL 17)
+    set(PIN_PSX_CLK 18)
+    set(PIN_PSX_CMD 19)
+    set(PIN_PSX_DAT 20)
+    add_compile_definitions("UART_TX=8"
+                            "UART_RX=9"
+                            "UART_PERIPH=uart1"
+                            "UART_BAUD=3000000"
+                            "SD_PERIPH=SPI1"
+                            "SD_MISO=24"
+                            "SD_MOSI=27"
+                            "SD_SCK=26"
+                            "SD_CS=29"
+                            "FLASH_OFF_CIV=0x1fb000"
+                            "FLASH_OFF_EEPROM=0x1fc000"
+                            )
+    set(SD2PSX_WITH_GUI FALSE)
+    set(SD2PSX_WITH_PSRAM FALSE)
 else()
     set(PIN_PSX_ACK 16)
     set(PIN_PSX_SEL 17)
     set(PIN_PSX_CLK 18)
     set(PIN_PSX_CMD 19)
     set(PIN_PSX_DAT 20)
-    set(PIN_PSX_SPD_SEL 10)
 endif()
 
 pico_sdk_init()
