Revert PIO change

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ elseif( VARIANT STREQUAL "PMC+")
     set(PIN_PSX_CLK 8)
     set(PIN_PSX_CMD 6)
     set(PIN_PSX_DAT 5)
+    set(PIN_PSX_SPD_SEL 10)
     add_compile_definitions("UART_TX=0"
                             "UART_RX=1"
                             "UART_PERIPH=uart1"
@@ -88,6 +89,7 @@ elseif( VARIANT STREQUAL "SD2PSXlite")
     set(PIN_PSX_CLK 18)
     set(PIN_PSX_CMD 19)
     set(PIN_PSX_DAT 20)
+    set(PIN_PSX_SPD_SEL 10)
     add_compile_definitions("UART_TX=8"
                             "UART_RX=9"
                             "UART_PERIPH=uart1"
@@ -108,6 +110,7 @@ else()
     set(PIN_PSX_CLK 18)
     set(PIN_PSX_CMD 19)
     set(PIN_PSX_DAT 20)
+    set(PIN_PSX_SPD_SEL 10)
 endif()
 
 pico_sdk_init()
