--- a/.github/workflows/build_nightly.yml
+++ b/.github/workflows/build_nightly.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - '*'
-    tags:
-      - 'v*'
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
@@ -15,7 +13,6 @@ jobs:
   create_release:
     name: Create release
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
     outputs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
@@ -25,8 +22,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
+          tag_name: latest
+          release_name: nightly
   build:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
@@ -103,14 +100,6 @@ jobs:
         asset_path: build/${{ matrix.filename }}${{ matrix.ext }}
         asset_name: ${{ matrix.filename }}${{ matrix.ext }}
         asset_content_type: application/octet-stream
-
-#    - name: Upload artifacts
-#      uses: actions/upload-artifact@v3
-#      with:
-#        name: SD2PSX-${{ github.sha }}
-#        path: |
-#          build/*.uf2
-#        
 
 #    - uses: marvinpinto/action-automatic-releases@v1.2.1
 #      if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v') #only release on tag or master branch
