--- a/.github/workflows/build_nightly.yml
+++ b/.github/workflows/build_nightly.yml
@@ -30,6 +30,7 @@ jobs:
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: ubuntu-latest
+    needs: create_release
     strategy: 
       matrix:
         target: [SD2PSX, SD2PSXBF, SD2PSXlite, PMC+, PMCZero]
@@ -70,27 +71,14 @@ jobs:
 
     - name: add build essential
       run: sudo apt update && sudo apt install -y build-essential gcc-arm-none-eabi
-    - name: Build Project
-      uses: threeal/cmake-action@v2.0.0
-      with:
-        options: |
-          CMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-          DEBUG_USB_UART:BOOL=${{matrix.debug}}
-          VARIANT=${{matrix.variant}}
-
-#    - name: Configure CMake for Debug USB
-#      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-#      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-#      run: cmake -B ${{github.workspace}}/build_usb -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DDEBUG_USB_UART:BOOL=ON
-#
-#    - name: Build Debug USB
-#      # Build your program with the given configuration
-#      run: cmake --build ${{github.workspace}}/build_usb --config ${{env.BUILD_TYPE}}
-
-#    - name: Rename Debug USB uf2
-#      run: mv build_usb/sd2psx.uf2 build/sd2psx_usb_debug.uf2
-
-
+   
+    - name: Configure CMake 
+      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
+      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}-DDEBUG_USB_UART:BOOL=${{matrix.debug}} -DVARIANT=${{matrix.variant}}
+    - name: Build Debug USB
+      # Build your program with the given configuration
+      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
     - name: Upload
       uses: actions/upload-release-asset@v1
