--- a/.github/workflows/build_nightly.yml
+++ b/.github/workflows/build_nightly.yml
@@ -19,11 +19,11 @@ jobs:
     steps:
       - name: Create release
         id: create_release
-        uses: actions/create-release@v1
+        uses: viperproject/create-nightly-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: latest
+          tag_name: ${{ env.TAG_NAME }}
           release_name: ${{ github.ref }}
   build:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
