--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -76,7 +76,7 @@ jobs:
     - name: Configure CMake 
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}-DDEBUG_USB_UART:BOOL=${{matrix.debug}} -DVARIANT=${{matrix.variant}}
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}-DDEBUG_USB_UART:BOOL=${{matrix.debug}} -DVARIANT=${{matrix.target}}
     - name: Build Debug USB
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
