--- a/.github/workflows/build_nightly.yml
+++ b/.github/workflows/build_nightly.yml
@@ -38,8 +38,10 @@ jobs:
         include:
           - debug: ON
             ext: -debug.uf2
+            delay: 3
           - debug: OFF
             ext: .uf2
+            delay: 0
           - target: SD2PSX
             filename: sd2psx
           - target: SD2PSXBF
@@ -70,14 +72,14 @@ jobs:
         fi
 
     - name: add build essential
-      run: sudo apt update && sudo apt install -y build-essential gcc-arm-none-eabi
+      run: sudo apt update && sudo apt install -y cmake gcc-arm-none-eabi libnewlib-arm-none-eabi libstdc++-arm-none-eabi-newlib clangd git python3.10-venv
    
     - name: Build
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: |
-          cmake -B ${{ github.workspace }}/build-${{ matrix.target }}-${{ matrix.debug }} -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -DDEBUG_USB_UART:BOOL=${{ matrix.debug }} -DVARIANT:STRING=${{ matrix.target }}  -G "Unix Makefiles"
-          cmake --build ${{github.workspace}}/build-${{ matrix.target }}-${{ matrix.debug }}
+          cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -DDEBUG_USB_UART:BOOL=${{ matrix.debug }} -DVARIANT:STRING=${{ matrix.target }} -DDEBUG_STARTUP_DELAY=${{ matrix.delay }}  -G "Unix Makefiles"
+          cmake --build ${{github.workspace}}/build
 
     - name: Upload
       uses: actions/upload-release-asset@v1
