--- a/.github/workflows/build_nightly.yml
+++ b/.github/workflows/build_nightly.yml
@@ -11,28 +11,28 @@ env:
   BUILD_TYPE: Release
 
 jobs:
-  create_release:
-    name: Create release
-    runs-on: ubuntu-latest
-    outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
-    steps:
-      - name: Create release
-        id: create_release
-        uses: viperproject/create-nightly-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: nigthly
-          release_name: nightly-${{ github.sha }}
-          keep_num: 0
-          keep_tags: false
+  #create_release:
+  #  name: Create release
+  #  runs-on: ubuntu-latest
+  #  outputs:
+  #    upload_url: ${{ steps.create_release.outputs.upload_url }}
+  #  steps:
+  #    - name: Create release
+  #      id: create_release
+  #      uses: viperproject/create-nightly-release@v1
+  #      env:
+  #        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #      with:
+  #        tag_name: nigthly
+  #        release_name: nightly-${{ github.sha }}
+  #        keep_num: 0
+  #        keep_tags: false
   build:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: ubuntu-latest
-    needs: create_release
+    #needs: create_release
     strategy: 
       matrix:
         target: [SD2PSX, SD2PSXBF, SD2PSXlite, PMC+, PMCZero]
@@ -83,12 +83,37 @@ jobs:
           cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -DDEBUG_USB_UART:BOOL=${{ matrix.debug }} -DVARIANT:STRING=${{ matrix.target }} -DDEBUG_STARTUP_DELAY=${{ matrix.delay }}  -G "Unix Makefiles"
           cmake --build ${{github.workspace}}/build
 
-    - name: Upload
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Upload variants artifact
+      uses: actions/upload-artifact@v4
       with:
-        upload_url: ${{ needs.create_release.outputs.upload_url }}
-        asset_path: build/${{ matrix.filename }}${{ matrix.ext }}
-        asset_name: ${{ matrix.filename }}${{ matrix.ext }}
-        asset_content_type: application/octet-stream
+        name:  ${{ matrix.filename }}${{ matrix.ext }}
+        path: build/${{ matrix.filename }}${{ matrix.ext }}
+
+  create_release:
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+    - name: Download all artifacts
+      uses: actions/download-artifact@v4
+
+    - name: Create Nightly
+      uses: mathieucarbou/marvinpinto-action-automatic-releases@latest
+      with:
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        prerelease: true
+        automatic_release_tag: "nightly"
+        title: "${{ env.SD2PSX_VERSION }}"
+        files: |
+          sd2psx*.uf2
+          pmc*.uf2
+
+    - name: Create release
+      if: startsWith(github.ref, 'refs/tags/v')
+      uses: mathieucarbou/marvinpinto-action-automatic-releases@latest
+      with:
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        prerelease: "${{ contains(github.ref, '-rc') }}"
+        title: "${{ env.SD2PSX_VERSION }}"
+        files: |
+          sd2psx*.uf2
+          pmc*.uf2
