--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/raspberrypi/pico-sdk.git
 [submodule "ext/lvgl"]
 	path = ext/lvgl
-	url = https://github.com/sd2psXtd/lvgl.git
+	url = https://github.com/lvgl/lvgl.git
 [submodule "ext/ESP8266SdFat"]
 	path = ext/ESP8266SdFat
 	url = https://github.com/sd2psx/ESP8266SdFat.git
