--- a/.github/workflows/build_nightly.yml
+++ b/.github/workflows/build_nightly.yml
@@ -2,6 +2,8 @@ name: Build Nightly
 
 on:
   push:
+    tags:
+      - 'v*'
     branches:
       - '*'
       - '*/*'
@@ -33,7 +35,7 @@ jobs:
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: ubuntu-latest
     #needs: create_release
-    strategy: 
+    strategy:
       matrix:
         target: [SD2PSX, SD2PSXlite, PMC+, PMCZero]
         debug: [ON, OFF]
@@ -73,7 +75,7 @@ jobs:
 
     - name: add build essential
       run: sudo apt-get update && sudo apt-get install -y cmake gcc-arm-none-eabi libnewlib-arm-none-eabi libstdc++-arm-none-eabi-newlib clangd git python3-venv
-   
+
     - name: Build
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
